--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Alpha Game With JS</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Tailwind CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
@@ -11,6 +16,23 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body class="">
+    <main
+      class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-center bg-no-repeat"
+    >
+      <section class="home min-h-screen flex justify-center items-center">
+        <div class="text-center space-y-5 text-white">
+          <h1 class="text-[120px] font-bold">ALPHABET CLASH</h1>
+          <p class="text-2xl !mb-10">
+            Unleash Your Keyboard Kung Fu : Press “Enter” to Play
+          </p>
+          <button class="btn px-10">Play Now</button>
+        </div>
+      </section>
+      <section class="play-ground"></section>
+      <section class="score"></section>
+    </main>
+  </body>
 </html>
