--- a/index.html
+++ b/index.html
@@ -22,16 +22,86 @@
     <main
       class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-center bg-no-repeat"
     >
-      <section class="home min-h-screen flex justify-center items-center">
+      <!-- Home Screen -->
+      <section
+        class="home min-h-screen flex justify-center items-center hidden"
+      >
         <div class="text-center space-y-5 text-white">
-          <h1 class="text-[120px] font-bold">ALPHABET CLASH</h1>
+          <h1 class="text-[150px] font-bold">ALPHABET CLASH</h1>
           <p class="text-2xl !mb-10">
             Unleash Your Keyboard Kung Fu : Press “Enter” to Play
           </p>
           <button class="btn px-10">Play Now</button>
         </div>
       </section>
-      <section class="play-ground"></section>
+      <!-- Playground -->
+      <section class="play-ground">
+        <div
+          class="artboard artboard-horizontal phone-6 border-[#010313cc] bg-white/70 border-[20px] rounded-2xl mx-auto"
+        >
+          <div class="flex justify-center">
+            <p class="px-5 pb-4 rounded-b-xl bg-[#2F2941] text-white">
+              Don't watch keyboard while playing...
+            </p>
+          </div>
+          <div class="flex justify-center items-center h-full">
+            <p class="text-9xl font-bold pb-10">Y</p>
+          </div>
+        </div>
+        <!-- keyboard Start -->
+        <div class="my-20">
+          <div class="my-1 flex w-full justify-center gap-1">
+            <kbd class="kbd">q</kbd>
+            <kbd class="kbd">w</kbd>
+            <kbd class="kbd">e</kbd>
+            <kbd class="kbd">r</kbd>
+            <kbd class="kbd">t</kbd>
+            <kbd class="kbd">y</kbd>
+            <kbd class="kbd">u</kbd>
+            <kbd class="kbd">i</kbd>
+            <kbd class="kbd">o</kbd>
+            <kbd class="kbd">p</kbd>
+          </div>
+          <div class="my-1 flex w-full justify-center gap-1">
+            <kbd class="kbd">a</kbd>
+            <kbd class="kbd">s</kbd>
+            <kbd class="kbd">d</kbd>
+            <kbd class="kbd">f</kbd>
+            <kbd class="kbd">g</kbd>
+            <kbd class="kbd">h</kbd>
+            <kbd class="kbd">j</kbd>
+            <kbd class="kbd">k</kbd>
+            <kbd class="kbd">l</kbd>
+          </div>
+          <div class="my-1 flex w-full justify-center gap-1">
+            <kbd class="kbd">z</kbd>
+            <kbd class="kbd">x</kbd>
+            <kbd class="kbd">c</kbd>
+            <kbd class="kbd">v</kbd>
+            <kbd class="kbd">b</kbd>
+            <kbd class="kbd">n</kbd>
+            <kbd class="kbd">m</kbd>
+            <kbd class="kbd">/</kbd>
+          </div>
+        </div>
+        <!-- keyboard End -->
+
+        <div class="w-2/4 mx-auto flex justify-between">
+          <button
+            class="btn bg-[#894189] px-10 text-white rounded-full border-0"
+          >
+            Life
+            <span>1</span>
+          </button>
+
+          <button
+            class="btn bg-[#360490] rounded-full text-white border-0 px-10"
+          >
+            Score <span>1</span>
+          </button>
+        </div>
+      </section>
+      <!-- Score -->
       <section class="score"></section>
     </main>
   </body>
