--- a/index.html
+++ b/index.html
@@ -24,85 +24,104 @@
     >
       <!-- Home Screen -->
       <section
-        class="home min-h-screen flex justify-center items-center hidden"
+        id="home"
+        class="home min-h-screen flex justify-center items-center"
       >
         <div class="text-center space-y-5 text-white">
-          <h1 class="text-[150px] font-bold">ALPHABET CLASH</h1>
+          <h1 class="text-[120px] font-bold">ALPHABET CLASH</h1>
           <p class="text-2xl !mb-10">
             Unleash Your Keyboard Kung Fu : Press “Enter” to Play
           </p>
-          <button class="btn px-10">Play Now</button>
+          <button onclick="play()" class="btn px-10">Play Now</button>
         </div>
       </section>
       <!-- Playground -->
-      <section class="play-ground">
-        <div
-          class="artboard artboard-horizontal phone-6 border-[#010313cc] bg-white/70 border-[20px] rounded-2xl mx-auto"
-        >
-          <div class="flex justify-center">
-            <p class="px-5 pb-4 rounded-b-xl bg-[#2F2941] text-white">
-              Don't watch keyboard while playing...
-            </p>
-          </div>
-          <div class="flex justify-center items-center h-full">
-            <p class="text-9xl font-bold pb-10">Y</p>
-          </div>
-        </div>
-        <!-- keyboard Start -->
-        <div class="my-20">
-          <div class="my-1 flex w-full justify-center gap-1">
-            <kbd class="kbd">q</kbd>
-            <kbd class="kbd">w</kbd>
-            <kbd class="kbd">e</kbd>
-            <kbd class="kbd">r</kbd>
-            <kbd class="kbd">t</kbd>
-            <kbd class="kbd">y</kbd>
-            <kbd class="kbd">u</kbd>
-            <kbd class="kbd">i</kbd>
-            <kbd class="kbd">o</kbd>
-            <kbd class="kbd">p</kbd>
-          </div>
-          <div class="my-1 flex w-full justify-center gap-1">
-            <kbd class="kbd">a</kbd>
-            <kbd class="kbd">s</kbd>
-            <kbd class="kbd">d</kbd>
-            <kbd class="kbd">f</kbd>
-            <kbd class="kbd">g</kbd>
-            <kbd class="kbd">h</kbd>
-            <kbd class="kbd">j</kbd>
-            <kbd class="kbd">k</kbd>
-            <kbd class="kbd">l</kbd>
-          </div>
-          <div class="my-1 flex w-full justify-center gap-1">
-            <kbd class="kbd">z</kbd>
-            <kbd class="kbd">x</kbd>
-            <kbd class="kbd">c</kbd>
-            <kbd class="kbd">v</kbd>
-            <kbd class="kbd">b</kbd>
-            <kbd class="kbd">n</kbd>
-            <kbd class="kbd">m</kbd>
-            <kbd class="kbd">/</kbd>
-          </div>
-        </div>
-        <!-- keyboard End -->
-
-        <div class="w-2/4 mx-auto flex justify-between">
-          <button
-            class="btn bg-[#894189] px-10 text-white rounded-full border-0"
+      <section id="play-ground" class="hidden">
+        <div class="pt-32">
+          <div
+            class="artboard artboard-horizontal phone-6 border-[#010313cc] bg-white/70 border-[20px] rounded-2xl mx-auto"
           >
-            Life
-            <span>1</span>
-          </button>
+            <div class="flex justify-center">
+              <p class="px-5 pb-4 rounded-b-xl bg-[#2F2941] text-white">
+                Don't watch keyboard while playing...
+              </p>
+            </div>
+            <div class="flex justify-center items-center h-full">
+              <p id="current-text" class="text-9xl font-bold pb-10 uppercase">
+                Y
+              </p>
+            </div>
+          </div>
+          <!-- keyboard Start -->
+          <div class="my-20">
+            <div class="my-1 flex w-full justify-center gap-1">
+              <kbd id="q" class="kbd">q</kbd>
+              <kbd id="w" class="kbd">w</kbd>
+              <kbd id="e" class="kbd">e</kbd>
+              <kbd id="r" class="kbd">r</kbd>
+              <kbd id="t" class="kbd">t</kbd>
+              <kbd id="y" class="kbd">y</kbd>
+              <kbd id="u" class="kbd">u</kbd>
+              <kbd id="i" class="kbd">i</kbd>
+              <kbd id="o" class="kbd">o</kbd>
+              <kbd id="p" class="kbd">p</kbd>
+            </div>
+            <div class="my-1 flex w-full justify-center gap-1">
+              <kbd id="s" class="kbd">s</kbd>
+              <kbd id="d" class="kbd">d</kbd>
+              <kbd id="f" class="kbd">f</kbd>
+              <kbd id="a" class="kbd">a</kbd>
+              <kbd id="g" class="kbd">g</kbd>
+              <kbd id="h" class="kbd">h</kbd>
+              <kbd id="j" class="kbd">j</kbd>
+              <kbd id="k" class="kbd">k</kbd>
+              <kbd id="l" class="kbd">l</kbd>
+            </div>
+            <div class="my-1 flex w-full justify-center gap-1">
+              <kbd id="z" class="kbd">z</kbd>
+              <kbd id="x" class="kbd">x</kbd>
+              <kbd id="c" class="kbd">c</kbd>
+              <kbd id="v" class="kbd">v</kbd>
+              <kbd id="b" class="kbd">b</kbd>
+              <kbd id="n" class="kbd">n</kbd>
+              <kbd id="m" class="kbd">m</kbd>
+              <kbd id="/" class="kbd">/</kbd>
+            </div>
+          </div>
+          <!-- keyboard End -->
 
-          <button
-            class="btn bg-[#360490] rounded-full text-white border-0 px-10"
-          >
-            Score <span>1</span>
-          </button>
+          <div class="w-2/4 mx-auto flex justify-between">
+            <button
+              class="btn bg-[#894189] px-10 text-white rounded-full border-0"
+            >
+              Life
+              <span id="current-life">5</span>
+            </button>
+
+            <button
+              class="btn bg-[#360490] rounded-full text-white border-0 px-10"
+            >
+              Score <span id="score">0</span>
+            </button>
+          </div>
         </div>
       </section>
       <!-- Score -->
-      <section class="score"></section>
+      <section
+        id="final-score"
+        class="score flex min-h-screen justify-center items-center hidden"
+      >
+        <div
+          class="bg-[#ffffff70] w-96 mx-auto text-center text-white p-10 rounded-lg space-y-6"
+        >
+          <p id="last-score" class="text-6xl font-semibold">Score : 14</p>
+          <button onclick="play()" class="btn px-10">Play Again</button>
+          <p>Practice will make you Pro</p>
+        </div>
+      </section>
     </main>
+
+    <script src="script/utiliy.js"></script>
+    <script src="script/script.js"></script>
   </body>
 </html>
